# real-time-serving

./: .gitignore  1-MODEL-SERVING.ipynb  2-MODEL-ORCHESTRATION.ipynb  Makefile  README.ipynb  README.md  Untitled.ipynb  hello.py  pyproject.toml
simplemodel/: LICENSE  Makefile  README.md  pyproject.toml  setup.py
simplemodel/docs/: Makefile  conf.py  index.rst  make.bat
simplemodel/docs/examples/: model-settings.json
simplemodel/simplemodel/: __init__.py  common.py  runtime.py
simplemodel/tests/: test_runtime.py
