[project]
name = "real-time-serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "jupyter>=1.1.1",
    "mlserver-mlflow>=1.6.1",
    "mlserver-sklearn>=1.6.1",
    "mlserver>=1.6.1",
    "notebook==7.0.8",
    "pip>=24.3.1",
    "scikit-learn>=1.5.2",
]
